<resources>
    <string name="app_name">AppNotes</string>
    <string name="str_no_notes">No notes</string>
    <string name="str_new_note">New note</string>
    <string name="str_image_note">Image note</string>
    <string name="str_note_content">Note content</string>
    <string name="str_button_add_image">Button add image</string>
    <string name="str_note_title">Note title</string>
    <string name="str_done">Done</string>
    <string name="str_delete">Delete</string>
    <string name="str_fields_invalid">Fields invalid</string>
    <string name="str_load">Load</string>
    <string name="str_url_image">Url image</string>
    <string name="str_save_image">Save image</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_really_wish_delete_1s">Really wish delete %1s?</string>
    <string name="str_yes">Yes</string>
</resources>