<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ActivityNote">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintVertical_weight="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_add_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_note"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/str_image_note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:srcCompat="@tools:sample/backgrounds/scenic"/>

            <EditText
                android:id="@+id/edt_title_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:minHeight="48dp"
                android:textStyle="bold"
                android:textSize="32sp"
                android:hint="@string/str_note_title"
                android:autofillHints="no"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@tools:sample/lorem[10]"/>

            <EditText
                android:id="@+id/edt_content_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/str_note_content"
                android:inputType="textMultiLine"
                android:minHeight="200dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_title_note"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@tools:sample/lorem[120]" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/btn_add_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_add_photo_alternate_24"
        android:contentDescription="@string/str_button_add_image"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>